cluster/circuit-design/stage/app.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: circuit-design-stage
  name: app
  labels:
    app: app
    stage: stage
    service: circuit-design
spec:
  selector:
    app: app
    stage: stage
    service: circuit-design
  ports:
    - name: http
      port: 80
    - name: https
      port: 443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: circuit-design-stage
  labels:
    app: app
    stage: stage
    service: circuit-design
spec:
  selector:
    matchLabels:
      app: app
      stage: stage
      service: circuit-design
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: app
        stage: stage
        service: circuit-design
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: app
          image: eu.gcr.io/circuit-design-ru/circuit-design-app
          imagePullPolicy: Always
          ports:
            - containerPort: 80
            - containerPort: 443
          volumeMounts:
            - name: app-hdd
              mountPath: /usr/app/src/project/storage
          readinessProbe:
            httpGet:
              port: 80
              path: /api/v1/helthz
            initialDelaySeconds: 300
            periodSeconds: 60
          livenessProbe:
            httpGet:
              port: 80
              path: /api/v1/helthz
            initialDelaySeconds: 600
            periodSeconds: 300
